--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
+        <img src="assets/logo.webp" alt="Renzo" />
         <h1>Designer & Dev</h1>
     </body>
 </html>
