--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap"
+            rel="stylesheet"
+        />
         <title>Designer & Dev</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <img src="assets/logo.webp" alt="Renzo" />
-        <h1>Designer & Dev</h1>
+        <div class="upper">
+            <img src="assets/logo.webp" alt="Renzo" class="logo" />
+
+            <button class="menu-btn glass" aria-label="Open navigation menu">
+                Menu
+            </button>
+            <nav class="nav">
+                <div class="nav__menu">
+                    <a href="#home" class="nav__link">Home</a>
+                    <a href="#my-work" class="nav__link">My Work</a>
+                    <a href="#contact" class="nav__link">Contact</a>
+                </div>
+            </nav>
+        </div>
+        <section id="landing">
+            <p>
+                I am a <span class="glass">Wev Developer</span> and
+                <span class="glass">Designer</span> with 5+ years of experience
+                in design and 4+ years in coding. I specialize in creating
+                personalized, unique solutions that prioritize
+                <span class="glass">accessibility</span> and
+                <span class="glass">sustainability</span>. With a strong blend
+                of creativity and technical skill, I strive to deliver impactful
+                and inclusive digital experiences.
+            </p>
+        </section>
+        <script src="scripts.js"></script>
     </body>
 </html>
