projects and contact

--- a/index.html
+++ b/index.html
@@ -40,6 +40,30 @@
                 and inclusive digital experiences.
             </p>
         </section>
+        <section id="my-work">
+            <div class="container">
+                <div class="box main"></div>
+                <div class="box guide">
+                    <p>
+                        im still working on making the projects cickable lol
+                        lazycore
+                    </p>
+                </div>
+                <div class="box serlo"></div>
+                <div class="box rimay"></div>
+                <div class="box lit"></div>
+                <div class="box email">
+                    <a href="mailto:info@byrenzo.com">
+                        <button>
+                            <div id="email">
+                                <img src="assets/mail.webp" alt="Email" />
+                                <p>Contact Me</p>
+                            </div>
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </section>
         <script src="scripts.js"></script>
     </body>
 </html>
