--- a/index.html
+++ b/index.html
@@ -64,6 +64,27 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <p>
+                &copy; 2025 by Renzo P. L. | This website code is licensed under
+                the
+                <a
+                    href="https://www.gnu.org/licenses/gpl-3.0.html"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >GPL-3.0</a
+                >. <br />
+                Designs, logos, and trademarks are the property of Renzo P. L.
+                and are not licensed under GPL-3.0. All rights reserved. <br />
+                View the source code at
+                <a
+                    href="https://github.com/bombardeenlima/byrenzo"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >GitHub</a
+                >.
+            </p>
+        </footer>
         <script src="scripts.js"></script>
     </body>
 </html>
