--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Web Developer and Designer specializing in custom solutions"
+        />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -16,8 +20,6 @@
     <body>
         <div class="upper">
             <img src="assets/logo.webp" alt="Renzo" class="logo" />
-
-            <!-- Add language selector -->
             <select
                 id="languageSelector"
                 class="glass"
@@ -26,7 +28,6 @@
                 <option value="en">English</option>
                 <option value="es">Español</option>
             </select>
-
             <button
                 class="menu-btn glass"
                 aria-label="Open navigation menu"
@@ -110,11 +111,10 @@
                 <div class="box main"></div>
                 <div class="box guide">
                     <p
-                        data-en="im still working on making the projects clickable lol lazycore"
-                        data-es="todavía estoy trabajando en hacer que los proyectos sean clickeables jaja"
+                        data-en="dont make me get a jobbbbbbbb"
+                        data-es="no quiero chambearrrrrrr"
                     >
-                        im still working on making the projects clickable lol
-                        lazycore
+                        dont make me get a jobbbbbbbb
                     </p>
                 </div>
                 <div class="box serlo"></div>
